Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/typevars/5060485/Compatibility.out
Compatibility.java:13:35: compiler.err.not.within.bounds: Test.Y, T
1 error
